# gxassessms

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  cli-reference.md  configuration.md  data-model.md  extension-points.md  installation.md  pipeline.md  quickstart.md  runbook.md  security.md
docs/security/: gxassessms-security-best-practices-report.md  gxassessms-threat-model.md  shared-host-deployment.md
docs/superpowers/plans/: 2026-04-03-powershell-module-provenance.md  2026-04-03-secure-replay-manifest.md  2026-04-11-mseco-ingest.md
docs/superpowers/specs/: 2026-04-03-powershell-module-provenance-design.md  2026-04-03-secure-replay-manifest-design.md  2026-04-11-mseco-ingest-design.md  2026-04-13-user-facing-documentation-design.md
report-renderers/basic/: package-lock.json  package.json  render.js
report-renderers/basic/sections/: executive-summary.js  findings.js  methodology.js
src/gxassessms/: __init__.py  registry.py
src/gxassessms/adapters/: __init__.py  _azure_auth.py  _base.py  _http.py  _tree_hash.py  _verification.py
src/gxassessms/adapters/_verification_scripts/: verify_module.ps1
src/gxassessms/adapters/azure_advisor/: __init__.py  adapter.py  mappings.py  parser.py
src/gxassessms/adapters/m365_assess/: __init__.py  adapter.py  mappings.py  parser.py
src/gxassessms/adapters/maester/: __init__.py  adapter.py  mappings.py  parser.py  policy.py
src/gxassessms/adapters/monkey365/: __init__.py  adapter.py  (+3 more)
src/gxassessms/cli/: __init__.py  _helpers.py  main.py  output.py  preflight_types.py
src/gxassessms/consolidation/: __init__.py  dedup.py  rules.py
src/gxassessms/core/: hashing.py
src/gxassessms/mappings/: README.md  cis-azure-crossref.yaml  cis-m365-crossref.yaml
src/gxassessms/persistence/: __init__.py  artifacts.py  coverage_repo.py  database.py  engagement_repo.py  event_repo.py  explanation.py  finding_repo.py  repositories.py  schema.sql  types.py
src/gxassessms/pipeline/: __init__.py  _runner.py  config_snapshot_mirror.py  confinement.py  orchestrator.py  replay.py  stages.py  state.py
src/gxassessms/policy/: __init__.py  consolidation.py  normalization.py  reporting.py  roadmap.py  severity.py
src/gxassessms/qa/: __init__.py  noop.py
src/gxassessms/reporting/: __init__.py  basic_renderer.py  constants_bridge.py  payload.py  renderer_registry.py
tests/: conftest.py
tests/adapters/: test_adapter_template.py
tests/conformance/: adapter_suite.py  test_azure_advisor_conformance.py  test_m365_assess_conformance.py  test_maester_conformance.py  test_monkey365_conformance.py  test_prowler_conformance.py  test_scubagear_conformance.py  test_secure_score_conformance.py
tests/conventions/: test_datetime_conventions.py  test_enum_conventions.py  test_exception_conventions.py  test_import_boundaries.py  test_import_safety.py  test_mkdir_conventions.py  test_platform_safety.py  test_security_conventions.py
tests/fixtures/configs/: full.yaml  minimal.yaml  with_subscription.yaml
tests/fixtures/engagements/: seed_snapshot.py
tests/fixtures/module_hash_vectors/: expected_hash.txt
tests/golden/: constants_golden.json  sample_engagement_payload.json  test_golden_constants.py  test_golden_payload.py
tests/integration/: test_consolidation_roundtrip.py  test_ingest_flow.py  test_migrations.py  test_module_verification.py  test_payload_to_renderer.py  test_pipeline_end_to_end.py  test_replay_equivalence.py
tests/property/: test_consolidation_invariants.py  test_decode_config_snapshot.py
tests/unit/: test_registry.py
tests/unit/adapters/: conftest.py  test_adapter_capabilities.py  test_adapter_registry.py  test_approval_logic.py  test_azure_advisor_adapter.py  test_azure_advisor_collect_parity.py  test_azure_advisor_ingest.py  test_azure_advisor_mappings.py  test_azure_advisor_parser.py  test_azure_auth.py  test_base_utils.py  test_build_collection_output.py  test_http_helpers.py  test_m365_assess_adapter.py  test_m365_assess_collect_parity.py  test_m365_assess_mappings.py  test_m365_assess_parser.py  test_maester_collect_parity.py  test_maester_ingest.py  test_maester_mappings.py  test_maester_parser.py  test_module_policy.py  test_monkey365_adapter.py  test_monkey365_collect_parity.py  test_monkey365_mappings.py  test_monkey365_parser.py  test_monkey365_validate_raw.py  test_prowler_adapter.py  test_prowler_collect_parity.py  test_prowler_ingest.py  test_prowler_mappings.py  test_prowler_parser.py  test_scubagear_adapter.py  test_scubagear_collect_parity.py  test_scubagear_ingest.py  test_scubagear_mappings.py  test_scubagear_parser.py  test_scubagear_parser_fields.py  test_scubagear_validate_raw.py  test_secure_score_adapter.py  (+8 more)
tests/unit/cli/: test_adapters_check.py  test_commands.py  test_commands_utils.py  test_compute_hash_command.py  test_engagement_create.py  test_engagement_guardrails.py  test_helpers.py  test_helpers_adapter_filter.py  test_ingest_cmd.py  test_main.py  test_output.py  test_preflight_provenance.py
tests/unit/consolidation/: conftest.py  test_dedup.py  test_rules.py
tests/unit/core/: test_audit_context.py  test_config.py  test_constants.py  test_credentials.py  test_datetime_utils.py  test_enums.py  test_errors.py  test_models.py  test_path_validation.py  test_permissions.py  test_schema_sync.py  test_tool_observation_native_category.py  test_types.py
tests/unit/persistence/: test_artifacts.py  test_database.py  test_explanation.py  test_repositories.py  test_schema.py
tests/unit/pipeline/: test_config_snapshot_mirror.py  test_confinement.py  test_orchestrator.py  test_replay.py  test_runner.py  test_stages.py  test_state.py  test_state_machine.py
tests/unit/policy/: test_consolidation.py  test_normalization.py  test_policy_init.py  test_reporting.py  test_roadmap.py  test_severity.py
tests/unit/qa/: test_noop.py
tests/unit/reporting/: test_basic_renderer.py  test_constants_bridge.py  test_payload.py  test_renderer_registry.py
(+63 files in other folders)
