[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gxassessms"
version = "0.1.0"
description = "Microsoft Ecosystem Assessment Orchestrator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rick Passero", email = "rick@guardantix.com" },
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.27",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
]

[project.scripts]
mseco = "gxassessms.cli.main:main"

[project.entry-points."gxassessms.credentials"]
env_var = "gxassessms.core.contracts.credentials:EnvVarProvider"

[project.entry-points."gxassessms.qa_strategies"]
noop = "gxassessms.qa.noop:NoOpQAStrategy"

[tool.hatch.build.targets.wheel]
packages = ["src/gxassessms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
