[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gxassessms"
version = "0.1.0"
description = "Microsoft Ecosystem Assessment Orchestrator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rick Passero", email = "rick@guardantix.com" },
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.27",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
]

[project.scripts]
mseco = "gxassessms.cli.main:main"

[project.entry-points."gxassessms.credentials"]
env_var = "gxassessms.core.contracts.credentials:EnvVarProvider"

[project.entry-points."gxassessms.qa_strategies"]
noop = "gxassessms.qa.noop:NoOpQAStrategy"

[tool.hatch.build.targets.wheel]
packages = ["src/gxassessms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=gxassessms",
    "--cov-report=term-missing",
    "--cov-branch",
    "--no-header",
    "-q",
]

[tool.coverage.run]
source = ["gxassessms"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (flag print calls)
    "RUF",    # ruff-specific rules
    "PT",     # flake8-pytest-style
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is fine in tests
    "S105",   # hardcoded password false positives in test fixtures
    "S106",   # hardcoded password arg false positives in test fixtures
    "T20",    # print is fine in tests
]
